# ascii-table-qt

./: .gitignore  CMakeLists.txt  README.md  View.qml  main.cpp  main.qml
AsciiTable/: CMakeLists.txt
TableModel/: CMakeLists.txt  TableModel.cpp  TableModel.h
ascii_table_qt/: CMakeLists.txt  TView.qml  View.qml  main.cpp
ascii_table_qt/AsciiTable/: ascii_table.cpp  ascii_table.h
